# personal_ai_project

./: .gitattributes  .gitignore  README.md
quantitative_trading/: .antigravityrules  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  analysis_report.md  build_historical_flow_mart.py  conversation_l2_cache.md  history.md  ingest_text_context.py  main.py  process.md  pyproject.toml  query_historical_flows.py  simulate_and_send.py  skills-lock.json  skills.md  test_db.py  test_imports.py  test_print.py  test_report.md
quantitative_trading/.codex/: config.toml
quantitative_trading/.githooks/: check_repo_policy.py  pre-commit  sync_ipynb_mirrors.py
quantitative_trading/AI_trading_temporary/: AI_trading_youtube_upbit_report_20260607.md  analysis_report.md
quantitative_trading/advisors/: __init__.py  wealth_tech.py
quantitative_trading/agents/: report_generator.py  situation_analyzer.py
quantitative_trading/analysis/: __init__.py  optimization_diagnostics.py
quantitative_trading/contexts/: __init__.py  text_context.py
quantitative_trading/data/: .gitkeep
quantitative_trading/database/: case_db.py  paths.py
quantitative_trading/engine/: __init__.py  data.py  display.py  features.py  fusion.py  models.py  point.py  preprocessing.py  resources.py  risk.py  windows.py
quantitative_trading/integrations/: __init__.py
quantitative_trading/marts/: __init__.py  historical_flow.py
quantitative_trading/materials/: example.md  quant_and_stock.md
quantitative_trading/pipelines/: __init__.py  auto_pipeline.py  build_historical_flow_mart.py  ingest_text_context.py  (+2 more)
resum/: .gitignore  README.md  agent.py  construction_agent.py  job_hunter.py  langchain_agent.py  langgraph_agent.py  main.py  pyproject.toml  requirements.txt  revise_resume.py  temp_search.py
(+120 files in other folders)
