[project]
name = "stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "openai",
    "google-generativeai",
    "numpy",
    "matplotlib",
    "fastdtw",
    "scipy",
    "duckdb",
    "pandas",
    "torch",
    "optuna",
    "statsmodels"
]

